k8s/platform/mlflow-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-postgres
  namespace: platform
spec:
  selector:
    app: mlflow-postgres
  ports:
    - port: 5432
      targetPort: 5432
