k8s/platform/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: platform
spec:
  type: NodePort
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
